@@ -26,11 +26,11 @@ import lombok.ToString;
 import org.apache.commons.lang.StringUtils;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.interceptor.RequirePOST;
 
 import java.net.ProxySelector;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static io.jenkins.plugins.lark.notice.sdk.constant.Constants.DEFAULT_TITLE;
 import static io.jenkins.plugins.lark.notice.sdk.constant.Constants.NOTICE_ICON;
@@ -175,7 +175,11 @@ public class LarkRobotConfig implements Describable<LarkRobotConfig> {
          * @param value Robot name
          * @return Validation result, returns FormValidation.ok() if validation passes, otherwise returns an error message
          */
+        @RequirePOST
         public FormValidation doCheckName(@QueryParameter String value) {
+            if (!Jenkins.get().hasPermission(Jenkins.ADMINISTER)) {
+                return FormValidation.error("You do not have permission to access this resource");
+            }
             return StringUtils.isNotBlank(value) ? FormValidation.ok() :
                     FormValidation.error(Messages.form_validation_name());
         }
@@ -186,7 +190,11 @@ public class LarkRobotConfig implements Describable<LarkRobotConfig> {
          * @param value Webhook key
          * @return Validation result, returns FormValidation.ok() if validation passes, otherwise returns an error message
          */
+        @RequirePOST
         public FormValidation doCheckWebhook(@QueryParameter String value) {
+            if (!Jenkins.get().hasPermission(Jenkins.ADMINISTER)) {
+                return FormValidation.error("You do not have permission to access this resource");
+            }
             return StringUtils.isBlank(value) || Objects.isNull(RobotType.fromUrl(value)) ?
                     FormValidation.error(Messages.form_validation_webhook()) : FormValidation.ok();
         }
@@ -194,22 +202,23 @@ public class LarkRobotConfig implements Describable<LarkRobotConfig> {
         /**
          * Tests whether the robot configuration works properly.
          *
-         * @param id      The robot ID.
-         * @param name    The robot's name.
-         * @param webhook The Webhook key.
-         * @param proxy   The proxy settings.
-         * @param keyword The keyword.
-         * @param secret  The encryption key.
+         * @param id              The robot ID.
+         * @param name            The robot's name.
+         * @param webhook         The Webhook key.
+         * @param proxy           The proxy settings.
+         * @param securityConfigs The security configs.
          * @return Returns the test result. If the test passes, it returns FormValidation.respond(Kind.OK); otherwise, it returns an error message.
          */
-        public FormValidation doTest(@QueryParameter("id") String id, @QueryParameter("name") String name,
-                                     @QueryParameter("webhook") String webhook, @QueryParameter("proxy") String proxy,
-                                     @QueryParameter("keyword") String keyword, @QueryParameter("secret") String secret) {
+        @RequirePOST
+        public FormValidation doTest(@QueryParameter String id, @QueryParameter String name,
+                                     @QueryParameter String webhook, @QueryParameter String proxy,
+                                     @QueryParameter String securityConfigs) {
+            if (!Jenkins.get().hasPermission(Jenkins.ADMINISTER)) {
+                return FormValidation.error("You do not have permission to access this resource");
+            }
 
-            List<LarkSecurityPolicyConfig> securityPolicyConfigs = Stream.of(keyword, secret)
-                    .map(json -> JsonUtils.readValue(json, LarkSecurityPolicyConfig.class))
-                    .filter(Objects::nonNull).filter(config -> StringUtils.isNotBlank(config.getValue()))
-                    .collect(Collectors.toList());
+            List<LarkSecurityPolicyConfig> securityPolicyConfigs = JsonUtils.readList(securityConfigs, LarkSecurityPolicyConfig.class)
+                    .stream().filter(config -> StringUtils.isNotBlank(config.getValue())).toList();
 
             LarkRobotConfig robotConfig = new LarkRobotConfig(id, name, webhook, securityPolicyConfigs);
 
